crates/daemon/tests/snapshots/project_env_reconciliation__missing_context_leaves_dotenv_unchanged_and_records_failure.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "error": String("Managed Resource runtime `postgres` is not supported yet"),
            "job_id": String("job_000002"),
            "type": String("job_failed"),
        },
    ],
    "USER_VALUE=kept\n",
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Failed,
            message: Some(
                "Managed Resource runtime `postgres` is not supported yet",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
    JobRecord {
        id: "job_000002",
        kind: "reconcile",
        scope: "project:<project_id>",
        status: Failed,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: None,
        error: Some(
            "Managed Resource runtime `postgres` is not supported yet",
        ),
    },
)
