crates/daemon/tests/snapshots/project_env_reconciliation__omitted_resource_track_reuses_stored_track_when_manifest_default_changes.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "summary": String("Project env rendered"),
            "type": String("job_completed"),
        },
    ],
    [
        Object {
            "job_id": String("job_000004"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000004"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000004"),
            "summary": String("Project env rendered"),
            "type": String("job_completed"),
        },
    ],
    "postgres:\n  env:\n    DB_HOST: \"${host}\"\n    DB_PORT: \"${port}\"\n",
    Some(
        "# >>> PV MANAGED\nDB_HOST=127.0.0.1\nDB_PORT=3306\n# <<< PV MANAGED\n",
    ),
    [
        ProjectManagedResourceRecord {
            project_id: "<project_id>",
            resource_name: "postgres",
            track: "8.0",
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Rendered,
            message: Some(
                "rendered Project env",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
    JobRecord {
        id: "job_000004",
        kind: "reconcile",
        scope: "project:<project_id>",
        status: Succeeded,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: Some(
            "Project env rendered",
        ),
        error: None,
    },
)
